--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
-    "react": "^18.1.0",
+    "axios": "1.5.0",
+    "react": "18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "sass": "^1.67.0",
     "web-vitals": "^2.1.3"
   },
   "overrides": {
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
