--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "1.5.0",
+    "postcss-loader": "^7.3.3",
     "react": "18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.16.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "webpack": "^5.88.2"
   }
 }
