--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "axios": "1.5.0",
     "postcss-loader": "^7.3.3",
     "react": "18.1.0",
@@ -14,12 +15,12 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
-    "sass": "^1.67.0",
     "web-vitals": "^2.1.3"
   },
   "overrides": {
     "nth-check": "2.0.1",
-    "semver": "^7.5.3"
+    "semver": "^7.5.3",
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "webpack": "^5.88.2"
   }
 }
